add row color render

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-<!--                            <includeScope>compile</includeScope>-->
+                            <!--                            <includeScope>compile</includeScope>-->
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
                         </configuration>
                     </execution>
@@ -97,6 +97,18 @@
             <artifactId>LGoodDatePicker</artifactId>
             <version>11.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
     </dependencies>
+
 
 </project>
